[package]
name = "shf"
version = "0.1.2"
authors = ["Sander Smits <seater.cherub0k@icloud.com>"]
edition = "2021"
description = "Simple SSH host finder"
repository = "https://github.com/jsmits/shf"
readme = "README.md"
keywords = ["ssh", "config", "host", "search", "list"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.12", features = ["derive", "env", "unicode", "cargo"] }
log = "0.4.17"
skim = "0.9.4"
ssh_cfg = "0.3.0"
tokio = { version = "1.20.0", features = ["rt"] }
