[package]
name = "shf"
version = "0.2.2"
authors = ["Sander Smits <seater.cherub0k@icloud.com>"]
edition = "2021"
description = "Simple SSH host finder"
repository = "https://github.com/jsmits/shf"
readme = "README.md"
keywords = ["ssh", "config", "host", "search", "list"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive", "env", "unicode", "cargo"] }
log = "0.4.21"
skim = "0.10.4"
ssh_cfg = "0.3.0"
tokio = { version = "1.37.0", features = ["rt"] }

[profile.release]
lto = true
strip = true
